apps/kymc/overlays/aws-us-west-2-cc-smarsh-dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kymc
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: kymc
      app.kubernetes.io/instance: kymc
  template:
    spec:
      containers:
        - name: kymc
          resources:
            limits:
              cpu: 1000m
              memory: 3G
              ephemeral-storage: 1G
            requests:
              cpu: 100m
              memory: 2G
              ephemeral-storage: 256M
